# CppPlayground

./: CMakeLists.txt  README.md  generate_keys.sh
certificate/: CMakeLists.txt
certificate/adapter/in/tui/include/: CertificateController.h
certificate/adapter/in/tui/src/: CertificateController.cc
certificate/application/outport/include/: UpdateCertificatePort.h
certificate/application/service/src/: AddCertificateService.cc
certificate/domain/include/: Certificate.h
certificate/domain/src/: Certificate.cc
certificate/test/: test_certificate.cpp
cmake/module/: V2XClangTidyFlags.cmake
game/: CMakeLists.txt
game/application/inport/include/: AddCertificateUseCase.h
sample/: CMakeLists.txt
sample/gbench/: bench_main.cpp  bench_sample.cpp
sample/gtest/: test_main.cpp  test_sample.cpp
sample/include/: key_exchange.hpp
sample/src/: key_exchange.cpp
sample/test/: test_main.cpp  test_sample.cpp
tui_rog_game/: CMakeLists.txt  allowed_architecture.dot  error  main.cc
tui_rog_game/adapter/in/tui/: CMakeLists.txt
tui_rog_game/adapter/in/tui/include/: TuiAdapter.h
tui_rog_game/adapter/in/tui/src/: TuiAdapter.cc
tui_rog_game/application/domain/event/: CMakeLists.txt
tui_rog_game/application/domain/event/include/: CombatStartedEvent.h  DescriptionGeneratedEvent.h  DomainEvent.h  EnemyAttackedEvent.h  EnemyDefeatedEvent.h  GameLoadedEvent.h  ItemFoundEvent.h  ItemUsedEvent.h  MapChangedEvent.h  PlayerAttackedEvent.h  PlayerDiedEvent.h  PlayerLeveledUpEvent.h  PlayerMovedEvent.h
tui_rog_game/application/domain/event/src/: CombatStartedEvent.cc  DescriptionGeneratedEvent.cc  DomainEvent.cc  EnemyAttackedEvent.cc  EnemyDefeatedEvent.cc  GameLoadedEvent.cc  ItemFoundEvent.cc  ItemUsedEvent.cc  MapChangedEvent.cc  PlayerAttackedEvent.cc  PlayerDiedEvent.cc  PlayerLeveledUpEvent.cc  PlayerMovedEvent.cc
tui_rog_game/application/domain/model/: CMakeLists.txt
tui_rog_game/application/domain/model/include/: Enemy.h  EnemyCoreStats.h  Goblin.h  Item.h  Map.h  MapDimensions.h  Orc.h  Player.h  PlayerCoreStats.h  Position.h  Stats.h  Tile.h
tui_rog_game/application/domain/model/src/: Enemy.cc  Goblin.cc  Item.cc  Map.cc  Orc.cc  Player.cc
tui_rog_game/application/domain/model/test/: CMakeLists.txt  PositionTest.cc
tui_rog_game/application/domain/service/: CMakeLists.txt
tui_rog_game/application/domain/service/include/: GameEngine.h
tui_rog_game/application/domain/service/src/: GameEngine.cc
tui_rog_game/application/domain/service/test/: CMakeLists.txt  GameEngineTest.cc
tui_rog_game/application/port/in/: CMakeLists.txt
tui_rog_game/application/port/in/include/: IGetPlayerActionUseCase.h  PlayerActionCommand.h
tui_rog_game/assembly/: CMakeLists.txt
tui_rog_game/assembly/include/: ApplicationBuilder.h
tui_rog_game/assembly/src/: ApplicationBuilder.cc
tui_rog_game/common/: CMakeLists.txt
tui_rog_game/common/include/: DomainEvent.h  ScopeGuard.h
tui_rog_game/etc/: HexBook.md  PLAN.md
tui_rog_game/scripts/: check_architecture.cmake  extract_deps.py
